添加认证
