# docs/swagger.yaml
@@ -1,5 +1,28 @@
 basePath: /
 definitions:
+  model.App:
+    properties:
+      appId:
+        description: appId
+        type: string
+      groupId:
+        description: groupId
+        items:
+          type: string
+        type: array
+      name:
+        description: name
+        type: string
+    type: object
+  model.Login:
+    properties:
+      password:
+        description: 密码
+        type: string
+      username:
+        description: 用户名
+        type: string
+    type: object
   resp.Resp:
     properties:
       code:
@@ -46,20 +69,11 @@ paths:
       - multipart/form-data
       description: 进行app存储
       parameters:
-      - description: appId
-        in: query
-        name: appId
-        type: string
-      - description: groupId
-        in: query
-        items:
-          type: string
-        name: groupId
-        type: array
-      - description: name
-        in: query
-        name: name
-        type: string
+      - description: App
+        in: body
+        name: object
+        schema:
+          $ref: '#/definitions/model.App'
       produces:
       - application/json
       responses:
@@ -76,20 +90,11 @@ paths:
       - multipart/form-data
       description: 更新app
       parameters:
-      - description: appId
-        in: query
-        name: appId
-        type: string
-      - description: groupId
-        in: query
-        items:
-          type: string
-        name: groupId
-        type: array
-      - description: name
-        in: query
-        name: name
-        type: string
+      - description: App
+        in: body
+        name: object
+        schema:
+          $ref: '#/definitions/model.App'
       produces:
       - application/json
       responses:
@@ -100,4 +105,42 @@ paths:
       summary: 更新app
       tags:
       - app
+  /sys/login:
+    post:
+      parameters:
+      - description: 用户名, 密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"登陆成功"}'
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - system
+  /sys/register:
+    post:
+      parameters:
+      - description: 用户名, 密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"注册成功"}'
+          schema:
+            type: string
+      summary: 用户注册
+      tags:
+      - system
 swagger: "2.0"
